# destiny-weapon-api

./: .gitignore  README.md  db.sqlite3  pyproject.toml
api/: admin.py  models.py  serializers.py  urls.py  views.py  watermarks.py
api/management/commands/: bootstrap_data.py  bootstrap_plugs.py  bootstrap_plugsets.py  bootstrap_weapons.py  helpers.py
api/migrations/: 0001_initial.py  0002_staticweapon_current_watermark.py  0003_staticweapon_original_watermark.py  0004_auto_20220303_1940.py  0005_staticweapon_origin_trait_hash.py  0006_staticweapon_relevent_original_watermark.py  0007_rename_relevent_original_watermark_staticweapon_original_nonsunset_watermark.py  0008_staticweapon_season_information.py  0009_auto_20240217_0004.py
config/: settings.py  urls.py
templates/: index.html
